[gd_scene load_steps=23 format=3 uid="uid://5ctsi71d6l6"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_2qhxg"]
[ext_resource type="FontFile" uid="uid://betuh687d54m2" path="res://fonts/FiraCode-VariableFont_wght.ttf" id="2_ckiy7"]
[ext_resource type="Script" path="res://scripts/map.gd" id="2_nu7tc"]
[ext_resource type="Texture2D" uid="uid://bpjb2x1vpyagx" path="res://images/kuro/clock.png" id="2_x7r0c"]
[ext_resource type="Script" path="res://scripts/Clock.gd" id="3_2rld8"]
[ext_resource type="Script" path="res://scripts/output.gd" id="3_gkcnj"]
[ext_resource type="Texture2D" uid="uid://d3qmhola2ro6f" path="res://images/kuro/node.png" id="4_5ypyn"]
[ext_resource type="Script" path="res://scripts/background_color.gd" id="4_6wn6w"]
[ext_resource type="Texture2D" uid="uid://bxkhvcsmbemv" path="res://images/kuro/node3.png" id="4_fy0g3"]
[ext_resource type="Texture2D" uid="uid://crbwawxe6ou81" path="res://images/kuro/you4.png" id="4_icjjf"]
[ext_resource type="Texture2D" uid="uid://cbfef8b7pjws1" path="res://images/kuro/door.png" id="5_kopq2"]
[ext_resource type="Texture2D" uid="uid://c206b3u0kif7x" path="res://images/kuro/connection4.png" id="5_lg83h"]
[ext_resource type="Texture2D" uid="uid://dnj77qukfgln4" path="res://images/kuro/up.png" id="6_d5hl4"]
[ext_resource type="Script" path="res://scripts/node.gd" id="6_qe2bg"]
[ext_resource type="Texture2D" uid="uid://d07eg5x1ov0v4" path="res://images/kuro/down.png" id="7_1kjrd"]
[ext_resource type="Texture2D" uid="uid://doybnjy4cr05" path="res://images/kuro/bg.png" id="9_2qqwb"]
[ext_resource type="Texture2D" uid="uid://hb7c7k13u80" path="res://images/kuro/quest_turn_in.png" id="10_g7o4q"]
[ext_resource type="Texture2D" uid="uid://bpj1614sj6bm1" path="res://images/kuro/quest_not_started.png" id="11_lm5rf"]
[ext_resource type="Texture2D" uid="uid://cu7xomnl37t4g" path="res://images/kuro/enemy.png" id="12_5afyf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_723ol"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujqkk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bwqeb"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2qhxg")

[node name="canvas" type="CanvasLayer" parent="."]

[node name="background_color" type="ColorRect" parent="canvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("4_6wn6w")

[node name="HBoxContainer" type="HBoxContainer" parent="canvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="side_panel" type="Panel" parent="canvas/HBoxContainer"]
custom_minimum_size = Vector2(384, 0)
layout_mode = 2

[node name="Clock" type="Sprite2D" parent="canvas/HBoxContainer/side_panel"]
visible = false
texture_filter = 1
position = Vector2(128, 376)
scale = Vector2(16.6602, 16.6602)
texture = ExtResource("2_x7r0c")
script = ExtResource("3_2rld8")
metadata/_edit_group_ = true

[node name="background_color" type="ColorRect" parent="canvas/HBoxContainer/side_panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="Background" type="TextureRect" parent="canvas/HBoxContainer/side_panel"]
visible = false
modulate = Color(0, 0, 0, 1)
texture_filter = 1
layout_mode = 0
offset_top = 512.0
offset_right = 112.0
offset_bottom = 624.0
scale = Vector2(4, 4)
texture = ExtResource("9_2qqwb")
stretch_mode = 1

[node name="map" type="Panel" parent="canvas/HBoxContainer/side_panel"]
visible = false
custom_minimum_size = Vector2(448, 448)
layout_mode = 0
offset_top = 512.0
offset_right = 448.0
offset_bottom = 960.0
script = ExtResource("2_nu7tc")

[node name="64x7" type="Node" parent="canvas/HBoxContainer/side_panel/map"]

[node name="assets" type="Node" parent="canvas/HBoxContainer/side_panel/map"]

[node name="you" type="Sprite2D" parent="canvas/HBoxContainer/side_panel/map/assets"]
modulate = Color(0.266667, 1, 1, 1)
z_index = 111
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("4_icjjf")

[node name="node" type="Sprite2D" parent="canvas/HBoxContainer/side_panel/map/assets"]
modulate = Color(0.32549, 0.2, 0.027451, 1)
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("4_fy0g3")
script = ExtResource("6_qe2bg")

[node name="connection" type="Sprite2D" parent="canvas/HBoxContainer/side_panel/map/assets"]
modulate = Color(0.32549, 0.2, 0.027451, 1)
z_index = 1
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("5_lg83h")

[node name="up" type="Sprite2D" parent="canvas/HBoxContainer/side_panel/map/assets"]
modulate = Color(0.94902, 0.568627, 0, 1)
z_index = 3
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("6_d5hl4")

[node name="down" type="Sprite2D" parent="canvas/HBoxContainer/side_panel/map/assets"]
modulate = Color(0.94902, 0.568627, 0, 1)
z_index = 3
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("7_1kjrd")

[node name="door" type="Sprite2D" parent="canvas/HBoxContainer/side_panel/map/assets"]
modulate = Color(0.94902, 0.568627, 0, 1)
z_index = 3
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("5_kopq2")

[node name="quest_turn_in" type="Sprite2D" parent="canvas/HBoxContainer/side_panel/map/assets"]
modulate = Color(0.94902, 0.568627, 0, 1)
z_index = 3
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("10_g7o4q")

[node name="quest_not_started" type="Sprite2D" parent="canvas/HBoxContainer/side_panel/map/assets"]
modulate = Color(0.94902, 0.568627, 0, 1)
z_index = 3
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("11_lm5rf")

[node name="enemy" type="Sprite2D" parent="canvas/HBoxContainer/side_panel/map/assets"]
modulate = Color(0.94902, 0.568627, 0, 1)
z_index = 3
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("12_5afyf")

[node name="map" type="Node" parent="canvas/HBoxContainer/side_panel/map"]

[node name="ascii_map" type="RichTextLabel" parent="canvas/HBoxContainer/side_panel"]
layout_mode = 2
offset_left = 8.0
offset_top = 616.0
offset_right = 376.0
offset_bottom = 952.0
size_flags_horizontal = 3
focus_mode = 2
theme_override_fonts/normal_font = ExtResource("2_ckiy7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_723ol")
bbcode_enabled = true
selection_enabled = true
script = ExtResource("3_gkcnj")

[node name="Panel2" type="Panel" parent="canvas/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(224, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="canvas/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="actors_output" type="RichTextLabel" parent="canvas/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.017
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 8.0
offset_right = -0.100037
offset_bottom = -48.0
bbcode_enabled = true
text = "fdsafdsa
"
script = ExtResource("3_gkcnj")

[node name="input_output" type="Control" parent="canvas/HBoxContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="input" type="Control" parent="canvas/HBoxContainer/input_output"]
layout_mode = 1
anchor_left = 0.004
anchor_top = 1.0
anchor_right = 0.991
anchor_bottom = 1.0
offset_left = 0.432
offset_top = -40.0
offset_right = 0.0279541
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="canvas/HBoxContainer/input_output/input"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.25
anchor_right = 1.0
anchor_bottom = 1.25
offset_left = -8.0
offset_top = -40.0
offset_right = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.775063, 0.775063, 0.775063, 1)

[node name="input" type="LineEdit" parent="canvas/HBoxContainer/input_output/input"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.25
anchor_right = 1.0
anchor_bottom = 1.25
offset_left = 56.0
offset_top = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ujqkk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_bwqeb")
flat = true

[node name="Label" type="Label" parent="canvas/HBoxContainer/input_output/input"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.25
anchor_right = 1.009
anchor_bottom = 1.25
offset_top = -32.0
offset_right = -826.92
text = "INPUT:
"

[node name="HBoxContainer" type="HBoxContainer" parent="canvas/HBoxContainer/input_output"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -48.0

[node name="output" type="RichTextLabel" parent="canvas/HBoxContainer/input_output/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
theme_override_fonts/normal_font = ExtResource("2_ckiy7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_723ol")
bbcode_enabled = true
selection_enabled = true
script = ExtResource("3_gkcnj")

[node name="debug" type="RichTextLabel" parent="canvas/HBoxContainer/input_output/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
theme_override_fonts/normal_font = ExtResource("2_ckiy7")
bbcode_enabled = true
selection_enabled = true

[node name="Panel" type="Panel" parent="canvas/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(224, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="sfx_manager" type="AudioStreamPlayer" parent="."]
volume_db = -20.292

[node name="Node11" type="CanvasLayer" parent="."]
visible = false
scale = Vector2(4, 4)
transform = Transform2D(4, 0, 0, 4, 0, 0)

[node name="Node" type="Sprite2D" parent="Node11"]
modulate = Color(0.211765, 0.0784314, 0, 1)
texture_filter = 1
position = Vector2(16, 24)
texture = ExtResource("4_5ypyn")

[node name="Node2" type="Sprite2D" parent="Node11"]
modulate = Color(0.211765, 0.0784314, 0, 1)
texture_filter = 1
position = Vector2(32, 24)
texture = ExtResource("4_5ypyn")

[node name="Node3" type="Sprite2D" parent="Node11"]
modulate = Color(0.211765, 0.0784314, 0, 1)
texture_filter = 1
position = Vector2(48, 24)
texture = ExtResource("4_5ypyn")

[node name="Node4" type="Sprite2D" parent="Node11"]
modulate = Color(0.211765, 0.0784314, 0, 1)
texture_filter = 1
position = Vector2(32, 8)
texture = ExtResource("4_5ypyn")

[node name="Door" type="Sprite2D" parent="Node11"]
modulate = Color(0.666667, 0.34902, 0.0392157, 1)
texture_filter = 1
position = Vector2(32, 8)
texture = ExtResource("5_kopq2")
metadata/_edit_group_ = true

[node name="Node5" type="Sprite2D" parent="Node11"]
modulate = Color(0.211765, 0.0784314, 0, 1)
texture_filter = 1
position = Vector2(16, 40)
texture = ExtResource("4_5ypyn")

[node name="Node6" type="Sprite2D" parent="Node11"]
modulate = Color(0.211765, 0.0784314, 0, 1)
texture_filter = 1
position = Vector2(32, 40)
texture = ExtResource("4_5ypyn")

[node name="Node7" type="Sprite2D" parent="Node11"]
modulate = Color(0.211765, 0.0784314, 0, 1)
texture_filter = 1
position = Vector2(48, 40)
texture = ExtResource("4_5ypyn")

[node name="Node8" type="Sprite2D" parent="Node11"]
modulate = Color(0.211765, 0.0784314, 0, 1)
texture_filter = 1
position = Vector2(16, 56)
texture = ExtResource("4_5ypyn")

[node name="Node9" type="Sprite2D" parent="Node11"]
modulate = Color(0.211765, 0.0784314, 0, 1)
texture_filter = 1
position = Vector2(32, 56)
texture = ExtResource("4_5ypyn")

[node name="Node10" type="Sprite2D" parent="Node11"]
modulate = Color(0.211765, 0.0784314, 0, 1)
texture_filter = 1
position = Vector2(48, 56)
texture = ExtResource("4_5ypyn")

[node name="Up" type="Sprite2D" parent="Node11"]
modulate = Color(0.666667, 0.34902, 0.0392157, 1)
texture_filter = 1
position = Vector2(16, 56)
texture = ExtResource("6_d5hl4")
metadata/_edit_group_ = true

[node name="Down" type="Sprite2D" parent="Node11"]
modulate = Color(0.666667, 0.34902, 0.0392157, 1)
texture_filter = 1
position = Vector2(48, 56)
texture = ExtResource("7_1kjrd")
